2010-12-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-retrieve-group-data-early): Fix the syntax of the
	QRESYNC command by deleting a superfluous space which broke Cyrus
	servers.  This change will break other servers that are buggy the other
	way around.

2010-12-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el: Reindent and fix long lines.
	(spam-copy-or-move-routine): Exclude invalid move destinations.

2010-12-14  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-mode): Don't install registry hooks if user hasn't
	installed the registry.

2010-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (rot13-string): New macro for XEmacs.  netrc.el uses it.

2010-12-13  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-run-gmane): Better check for gmane groups: error out if
	groupname doesn't contain "gmane".

2010-12-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* netrc.el (netrc-point-at-eol): Remove the unused netrc-point-at-old
	and netrc-bound-and-true-p bindings.
	(netrc-parse): Cache the netrc contents.

	* gnus-start.el (gnus-matches-options-n): Fix typo in last change.
	(gnus-1): Don't create the nndrafts group twice.
	(gnus-setup-news): There's no need to read the active file here, since
	that's done again later on a per-backend basis.
	(gnus-start-draft-setup): Make sure that the new group is started out
	empty.

	* gnus-agent.el (gnus-agentize): Don't create the queue group
	automatically on startup.  It'll be created later, if needed.

	* gnus-start.el (gnus-auto-subscribed-groups): Add nnimap to the list
	of automatically subscribed groups.
	(gnus-auto-subscribed-categories): New variable.
	(gnus-matches-options-n): Use it.
	(gnus-default-subscribed-newsgroups): Remove unused variable.
	(gnus-start-draft-setup): Message a bit less.

2010-12-13  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-run-imap): Return article list in order of increasing
	UID.

2010-12-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>
